Fix(backend): Map URI to CLOB column
Also removed use of URL class to reduce chances of exceptions by rogue data.